# hutwatch

./: .gitignore  CLAUDE.md  LUEMINUT.md  README.md  config.example.yaml  hutwatch.service  pyproject.toml  requirements.txt
.claude/: hooks.json
.claude/commands/: add-command.md  add-string.md  bump-version.md  issue.md  lint.md  release.md
docs/plans/: 2026-03-02-alert-system-design.md  2026-03-02-alert-system-impl.md  2026-03-02-device-hiding-design.md  2026-03-02-device-hiding-plan.md
hutwatch/: __init__.py  __main__.py  aggregator.py  alerts.py  api.py  app.py  config.py  console.py  db.py  demo.py  formatting.py  i18n.py  models.py  remote.py  strings_en.py  strings_fi.py  tui.py  weather.py  widget_output.py
hutwatch/ble/: __init__.py  scanner.py  sensor_store.py
hutwatch/ble/parsers/: __init__.py  base.py  ruuvi.py  xiaomi.py
hutwatch/telegram/: __init__.py  bot.py  commands.py  scheduler.py
scripts/: check_i18n.py  check_version_sync.py
widget/hutwatch.widget/: index.jsx
